Fixed caret-color for cursor to be visible in input fields

--- a/media/CSS/widgets.css
+++ b/media/CSS/widgets.css
@@ -17,6 +17,7 @@
     border-width: 0px;
     outline-width: 0px;
     -GtkTreeView-vertical-separator: 0;
+    caret-color: #000000;
 }
 
 /**
